[package]
name = "terrars"
version = "0.0.5"
edition = "2021"
description = "Terraform in Rust"
license = "ISC"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/terrars"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
erased-serde = "0.3.23"
once_cell = "1.16.0"
prettyplease = "0.1.22"
proc-macro2 = "1.0.47"
quote = "1.0.21"
serde = "1.0.147"
serde_json = "1.0.89"
slog = "2.7.0"
sloggers = "2.1.1"
syn = "1.0.103"
tempfile = "3.3.0"
thiserror = "1.0.37"
