[package]
name = "terrars"
version = "0.1.12"
edition = "2021"
description = "Terraform in Rust"
license = "ISC"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/terrars"

[dependencies]
aargvark = { version = "0.0.6", features = ["serde_json"] }
cargo_toml = "0.14.0"
erased-serde = "0.3.23"
genemichaels = "0.1.17"
loga = "0.1.5"
once_cell = "1.16.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
serde = "1.0.147"
serde_json = "1.0.89"
syn = "1.0.103"
tempfile = "3.3.0"
thiserror = "1.0.37"
toml = "0.5.11"

[workspace]
members = ["helloworld"]
