[package]
name = "terrars"
version = "0.1.13"
edition = "2021"
description = "Terraform in Rust"
license = "ISC"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/terrars"

[dependencies]
aargvark = { version = "0.3", features = ["serde_json"] }
cargo_toml = "0.20"
erased-serde = "0.4"
genemichaels-lib = "0.5"
loga = "0.5"
once_cell = "1"
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }
tempfile = "3"
thiserror = "1"
toml = "0.8"

[workspace]
members = ["helloworld"]
