[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
terrars = "*"
terrars-andrewbaxter-fly = { version = "0.1", features = [
    "app",
    "ip",
    "cert",
    "machine",
] }
terrars-andrewbaxter-dinker = { version = "0.1", features = ["image"] }
terrars-andrewbaxter-localrun = { version = "0.2", features = [
    "data_always_run",
] }
